--- a/index.css
+++ b/index.css
@@ -16,18 +16,22 @@ body {
 }
 
 #is-art {
-  font-size: 60px;
-  line-height: 60px;
+  font-weight: 700;
+  font-size: 72px;
+  line-height: 64px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
 #is-art-form {
+  margin-top: 30px;
   display: flex;
   justify-content: center;
   flex-direction: column;
 }
 
 #is-art-submit {
-  font-size: 30px;
 }
 
 .is-art-form-group {
