Use viewport width to define vertical spacing

--- a/index.css
+++ b/index.css
@@ -11,8 +11,8 @@ body {
 }
 
 .container {
-  padding-top: 5vh;
-  padding-bottom: 2.5vh;
+  padding-top: 5vw;
+  padding-bottom: 2.5vw;
   margin: 0 auto;
 }
 
