--- a/index.css
+++ b/index.css
@@ -1,5 +1,3 @@
-@import 'normalize.css/normalize.css';
-
 html {
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
   font-size: 16px;
@@ -25,6 +23,10 @@ body {
   flex: 1;
 }
 
+.hide {
+  opacity: 0;
+}
+
 #is-art {
   margin-top: 5vw;
   font-weight: 700;
@@ -43,6 +45,8 @@ body {
 
 #is-art-error {
   color: #ab4642;
+  opacity: 1;
+  transition: all 0.5s;
 }
 
 #is-art-keyfile {
