--- a/index.css
+++ b/index.css
@@ -1,11 +1,9 @@
-html {
-  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-  font-size: 16px;
-}
-
 body {
+  margin: 0;
   color: #212529;
   background-color: #f4f5f6;
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+  font-size: 16px;
 }
 
 .container {
@@ -68,6 +66,7 @@ body {
 }
 
 .is-art-form-group {
+  border: 0;
   margin-top: 2em;
 }
 
