--- a/index.css
+++ b/index.css
@@ -6,6 +6,13 @@ body {
   font-size: 16px;
 }
 
+a,
+a:focus,
+a:visited {
+  color: #212529;
+  text-decoration: underline;
+}
+
 .container {
   display: flex;
   flex-direction: column;
