--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@ body {
   background-color: #f4f5f6;
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
   font-size: 16px;
+  line-height: 1.2em;
 }
 
 a,
@@ -41,6 +42,11 @@ a:visited {
 
 #is-art-status {
   text-decoration: underline;
+}
+
+#is-art-error,
+#is-art-version {
+  min-height: 1.2em;
 }
 
 #is-art-error {
@@ -93,7 +99,7 @@ fieldset {
 }
 
 .is-art-form-group {
-  margin-top: 2em;
+  margin: 1.25em 0;
 }
 
 @media screen and (min-width: 660px) {
